[gd_scene load_steps=5 format=2]

[ext_resource path="res://SCENES/Menu/JournalDecouverte/JournalDecouverte.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 0.705882 )

[sub_resource type="DynamicFontData" id=2]
font_path = "res://ASSETS/FontKaph/Kaph-Regular.ttf"

[sub_resource type="DynamicFont" id=3]
size = 24
font_data = SubResource( 2 )

[node name="JournalDecouverte" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_right = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 128

[node name="Panel" type="Panel" parent="CanvasLayer"]
show_behind_parent = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -800.0
margin_top = -450.0
margin_right = 800.0
margin_bottom = 450.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Retour" type="Button" parent="CanvasLayer"]
visible = false
anchor_left = 0.7175
anchor_top = 0.884444
anchor_right = 0.97
anchor_bottom = 0.955556
margin_left = -117.0
margin_right = 29.0
text = "RETOUR"
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="Reprendre" type="Button" parent="CanvasLayer"]
visible = false
anchor_left = 0.715625
anchor_top = 0.884444
anchor_right = 0.97
anchor_bottom = 0.955556
margin_left = -117.0
margin_right = 26.0
text = "REPRENDRE"
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true,
"_edit_use_anchors_": true,
"_editor_description_": ""
}

[node name="ScrollContainer" type="ScrollContainer" parent="CanvasLayer"]
anchor_left = 0.036875
anchor_top = 0.0611111
anchor_right = 0.665
anchor_bottom = 0.856667
margin_left = 3.8147e-06
follow_focus = true
scroll_horizontal_enabled = false
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="ElementsContainer" type="GridContainer" parent="CanvasLayer/ScrollContainer"]
custom_constants/vseparation = 32
custom_constants/hseparation = 32
columns = 6
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="LongDescrPanel" type="Panel" parent="CanvasLayer"]
margin_left = 1032.0
margin_top = 54.0
margin_right = 1577.0
margin_bottom = 768.0
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/LongDescrPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="LightYearHint" type="Label" parent="CanvasLayer"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = -36.0
margin_right = 1101.0
margin_bottom = -8.0
text = "1 Année-Lumière = 9 461 milliards de kilomètres ou 0,3 Parsec"

[connection signal="tree_exiting" from="." to="." method="_on_JournalDecouverte_tree_exiting"]
